Fixes #479 -- added ResultaatTypeOmschrijvingGeneriek resource
