# src/selectielijst/api/serializers.py
@@ -11,12 +11,3 @@ class CommunicatieKanaalSerializer(serializers.HyperlinkedModelSerializer):
         model = CommunicatieKanaal
         fields = ("url", "naam", "omschrijving")
         extra_kwargs = {"url": {"lookup_field": "uuid"}}
-
-
-class ResultaattypeOmschrijvingGeneriekSerializer(
-    serializers.HyperlinkedModelSerializer
-):
-    class Meta:
-        model = ResultaattypeOmschrijvingGeneriek
-        fields = ("url", "omschrijving", "definitie", "opmerking")
-        extra_kwargs = {"url": {"lookup_field": "uuid"}}
